--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -10,6 +10,8 @@ group = "${APEX_GROUP}.${MOD_ID}.shared"
 version = "${MOD_VERSION}+${MINECRAFT_VERSION}"
 archivesBaseName = "${MOD_ID}-shared"
 
+sourceSets.main.resources.srcDirs += 'src/generated/resources'
+
 minecraft {
 	version("${MINECRAFT_VERSION}")
 }
