Add WallLight block Fix typo in WALL_LIGHT registration name
Add Fabric client initializer class, used to set block render types, unlike Forge, Fabric can not load the render types from block model files

Add macro replacement to model files in matching `src/main/resources/**/models/**/*.json` files

--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -121,7 +121,7 @@ processResources {
 		inputs.property "${key}", "${value}"
 	}
 
-	filesMatching([ '*.mixins.json', 'pack.mcmeta', 'fabric.mod.json' ]) {
+	filesMatching([ '*.mixins.json', 'pack.mcmeta', 'fabric.mod.json', '**/models/**/*.json' ]) {
 		expand project.properties
 	}
 
