--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -33,7 +33,7 @@ processResources {
 		inputs.property "${key}", "${value}"
 	}
 
-	filesMatching([ '*.mixins.json', 'pack.mcmeta' ]) {
+	filesMatching([ '*.mixins.json', 'pack.mcmeta', '**/models/**/*.json' ]) {
 		expand project.properties
 	}
 }
