--- a/Forge/build.gradle
+++ b/Forge/build.gradle
@@ -133,7 +133,7 @@ processResources {
 		inputs.property "${key}", "${value}"
 	}
 
-	filesMatching([ '*.mixins.json', 'pack.mcmeta', 'META-INF/mods.toml' ]) {
+	filesMatching([ '*.mixins.json', 'pack.mcmeta', 'META-INF/mods.toml', '**/models/**/*.json' ]) {
 		expand project.properties
 	}
 
