Update to Minecraft 1.19.3 Update to Forge 44.0.1 Update to Fabric 0.14.11+0.68.1

--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -10,7 +10,11 @@ group = "${APEX_GROUP}.${MOD_ID}.shared"
 version = "${MOD_VERSION}+${MINECRAFT_VERSION}"
 archivesBaseName = "${MOD_ID}-shared"
 
-sourceSets.main.resources.srcDirs += 'src/generated/resources'
+sourceSets {
+	main {
+		resources.srcDirs += 'src/main/generated'
+	}
+}
 
 minecraft {
 	version("${MINECRAFT_VERSION}")
@@ -38,7 +42,7 @@ processResources {
 	}
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
 	options.encoding = 'UTF-8'
 	options.release.set(JavaLanguageVersion.of("${JAVA_VERSION}").asInt())
 
@@ -48,7 +52,6 @@ tasks.withType(JavaCompile) {
 		}
 	}
 }
-
 
 java {
 	toolchain {
