--- a/gradle.properties
+++ b/gradle.properties
@@ -5,33 +5,31 @@ MOD_DESCRIPTION=Adds Fantasy-Themed Furniture & Decorational blocks to the game
 
 APEX_GROUP=xyz.apex.minecraft
 
-MINECRAFT_VERSION=1.19.2
-MINECRAFT_VERSION_RANGE=[1.19.2,1.19.3)
+MINECRAFT_VERSION=1.19.3
+MINECRAFT_VERSION_RANGE=[1.19.3,1.19.4)
 
 JAVA_VERSION=17
 MIXIN_VERSION=0.8.4
 
-PARCHMENT_MAPPINGS=2022.08.10
+PARCHMENT_MINECRAFT_VERSION=1.19.2
+PARCHMENT_MAPPINGS=2022.11.27
 
-FORGE_LOADER_VERSION=43
-FORGE_VERSION=43.1.0
-FORGE_VERSION_RANGE=[43.1.0,44.0.0)
+FORGE_LOADER_VERSION=44
+FORGE_VERSION=44.0.1
+FORGE_VERSION_RANGE=[44.0.0,45.0.0)
 
-FABRIC_LOADER_VERSION=0.14.9
-FABRIC_VERSION=0.60.0
-
-QUILT_LOADER_VERSION=0.18.1-beta.18
-QUILT_STANDARD_LIBRARIES_VERSION=3.0.0-beta.22
-QUILT_FABRIC_API_VERSION=4.0.0-beta.22+0.67.1
+FABRIC_LOADER_VERSION=0.14.11
+FABRIC_VERSION=0.68.1
 
 JADE_CF_ID=324717
-JEI_VERSION=11.2.0.246
+#JEI_VERSION=11.2.0.246
+DEVLOGIN_VERSION=0.1.0.2
 
-FORGE_JADE_CF_FILE_ID=4096513
+#FORGE_JADE_CF_FILE_ID=4096513
 
-FABRIC_MOD_MENU_VERSION=4.1.1
-FABRIC_LAZY_DFU_VERSION=0.1.3
-FABRIC_JADE_CF_FILE_ID=4096403
+FABRIC_MOD_MENU_VERSION=5.0.1
+#FABRIC_LAZY_DFU_VERSION=0.1.3
+FABRIC_JADE_CF_FILE_ID=4109859
 
 APEXCORE_ID=apexcore
 APEXCORE_VERSION=8.0.0
