--- a/gradle.properties
+++ b/gradle.properties
@@ -11,12 +11,12 @@ MINECRAFT_VERSION_RANGE=[1.19.3,1.19.4)
 JAVA_VERSION=17
 MIXIN_VERSION=0.8.4
 
-PARCHMENT_MINECRAFT_VERSION=1.19.2
-PARCHMENT_MAPPINGS=2022.11.27
+PARCHMENT_MINECRAFT_VERSION=1.19.3
+PARCHMENT_MAPPINGS=2022.12.18
 
 FORGE_LOADER_VERSION=44
-FORGE_VERSION=44.0.1
-FORGE_VERSION_RANGE=[44.0.0,45.0.0)
+FORGE_VERSION=44.0.30
+FORGE_VERSION_RANGE=[44.0.6,45.0.0)
 
 FABRIC_LOADER_VERSION=0.14.11
 FABRIC_VERSION=0.68.1
@@ -25,10 +25,10 @@ JADE_CF_ID=324717
 #JEI_VERSION=11.2.0.246
 DEVLOGIN_VERSION=0.1.0.2
 
-#FORGE_JADE_CF_FILE_ID=4096513
+FORGE_JADE_CF_FILE_ID=4199865
 
 FABRIC_MOD_MENU_VERSION=5.0.1
-#FABRIC_LAZY_DFU_VERSION=0.1.3
+FABRIC_LAZY_DFU_VERSION=0.1.3
 FABRIC_JADE_CF_FILE_ID=4109859
 
 APEXCORE_ID=apexcore
