--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'idea'
 	id 'maven-publish'
 
-	id 'org.spongepowered.gradle.vanilla' version '0.2.1-SNAPSHOT'
+	id 'org.spongepowered.gradle.vanilla' version '0.2.2-SNAPSHOT'
 }
 
 group = "${APEX_GROUP}.${MOD_ID}.shared"
@@ -18,6 +18,10 @@ sourceSets {
 
 minecraft {
 	version("${MINECRAFT_VERSION}")
+
+	if(file("src/main/resources/${MOD_ID}-common.accesswidener").exists()) {
+		accessWideners("src/main/resources/${MOD_ID}-common.accesswidener")
+	}
 }
 
 repositories {
